--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/base-64": "^1.0.0",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
+    "prettier": "2.7.1",
     "tailwindcss": "^3.1.2"
   }
 }
